# ── Core ─────────────────────────────────────────────────────────────────────
add_subdirectory(Core)

# ── Platform ─────────────────────────────────────────────────────────────────
add_subdirectory(Platform)

# ── RHI ──────────────────────────────────────────────────────────────────────
add_subdirectory(RHI)

# ── Job System ───────────────────────────────────────────────────────────────
add_subdirectory(Jobs)

# ── Assets ───────────────────────────────────────────────────────────────────
add_subdirectory(Assets)

# ── Framework ────────────────────────────────────────────────────────────────
add_subdirectory(Framework)

# ── UI ───────────────────────────────────────────────────────────────────────
add_subdirectory(UI)
