cmake_minimum_required(VERSION 3.20)
project(GromFramework LANGUAGES CXX)
add_library(GromFramework STATIC Source/Stub.cpp)
target_include_directories(GromFramework PUBLIC Include)
target_link_libraries(GromFramework PUBLIC GromCore GromJobs)
target_compile_features(GromFramework PUBLIC cxx_std_20)
